# Voice100Sharp

./: .gitattributes  .gitignore  Dockerfile  README.md  Voice100Sharp.sln  build_native.ps1
.github/workflows/: cmake.yml  msbuild.yml
Voice100/: AudioFeatureBuffer.cs  AudioFeatureExtractor.cs  AudioPreprocessor.cs  AudioProcessor.cs  AudioToMelSpectrogramPreprocessor.cs  CMUTokenizer.cs  CharTokenizer.cs  Encoder.cs  FFT.cs  HTKMelBands.cs  ISpeechRecognizer.cs  MelBands.cs  ModelDownloader.cs  NeMoSpeechRecognizer.cs  Program.cs  Settings.cs  SlaneyMelBands.cs  SpeechRecognizer.cs  SpeechRecognizerSession.cs  SpeechSynthesizer.cs  Vocoder.cs  Voice100.csproj  Voice100SpeechRecognizer.cs  WORLDVocoder.cs  WaveFile.cs  WebRtcVad.cs  Window.cs  YAMNetSession.cs
Voice100.Interactive/: Audio.cs  Formatting.cs  Voice100.Interactive.csproj  Voice100KernelExtension.cs
Voice100.Native/: AndroidManifest.xml  CMakeLists.txt  Package.nuspec  Package.props
Voice100.Native/voice100_native/: CMakeLists.txt  vocoder.cpp
Voice100.Native/webrtc_vad/: CMakeLists.txt
Voice100.Native/webrtc_vad/common_audio/vad/include/: webrtc_vad.h
Voice100.Tests/: CFFTTest.cs  FFTTest.cs  Voice100.Tests.csproj  Voice100Test.cs  WaveFileTest.cs
Voice100App/: Program.cs  Program2.cs  Voice100App.csproj  Voice100Test.cs  YAMNetTest.cs  packages.config
Voice100Sharp/: AudioFeatureExtractor.cs  SpeechRecognizer.cs  SpeechSynthesizer.cs  Voice100Sharp.csproj  packages.config
Voice100SharpApp/: AudioFeatureExtractor.cs  Program.cs  Voice100SharpApp.csproj  VoiceSession.cs  packages.config
notebooks/: voice100_asr.ipynb  voice100_processor.ipynb  voice100_sample.ipynb  voice100_tts.ipynb
voice100_native/: CMakeLists.txt  vocoder.cpp
webrtc_vad/: CMakeLists.txt  README.md
(+6 files in other folders)
